--- a/themes/hugo-book/layouts/404.html
+++ b/themes/hugo-book/layouts/404.html
@@ -22,6 +22,8 @@
       <div>
         <h1>404</h1>
         <h2>Page Not Found</h2>
+        <h3>可能由于文章目录修改导致未找到页面，可以回主页查找。<h3>
+        <h3>The page may have been moved, please go to the home page to find.<h3>
         <h3>
           <a href="{{ .Site.Home.RelPermalink }}">{{ .Site.Title }}</a>
         </h3>
