--- a/layouts/shortcodes/tables-style.html
+++ b/layouts/shortcodes/tables-style.html
@@ -3,8 +3,9 @@
     line-height: 28px;!important
 }
 
-table th:first-of-type {
+.markdown table th:first-of-type {
     min-width: 56px;
+    padding: 0px;!important
 }
 table th:nth-of-type(2) {
     width: 35%;
