--- a/layouts/shortcodes/tables-style.html
+++ b/layouts/shortcodes/tables-style.html
@@ -5,12 +5,13 @@
 
 .markdown table th:first-of-type {
     min-width: 56px;
-    padding: 0px;!important
 }
-table th:nth-of-type(2) {
+
+.markdown table th:nth-of-type(2) {
     width: 35%;
 }
-table th:nth-of-type(3) {
-    width: 57%;
+
+.markdown table th:nth-of-type(3) {
+    width: 20%;
 }
 </style>
