--- a/layouts/shortcodes/tables-style.html
+++ b/layouts/shortcodes/tables-style.html
@@ -3,6 +3,11 @@
     line-height: 28px;!important
 }
 
+.markdown table tr th, .markdown table tr td {
+    padding-top: 0rem;!important
+    padding-bottom: 0rem;!important
+}
+
 .markdown table th:first-of-type {
     min-width: 56px;
 }
