--- a/layouts/shortcodes/tables-style.html
+++ b/layouts/shortcodes/tables-style.html
@@ -1,11 +1,10 @@
 <style>
 .markdown {
-    line-height: 28px;!important
-}
+    line-height: 28px;
 
 .markdown table tr th, .markdown table tr td {
-    padding-top: 0rem;!important
-    padding-bottom: 0rem;!important
+    padding-top: 0rem;
+    padding-bottom: 0rem;
 }
 
 .markdown table th:first-of-type {
