--- a/layouts/shortcodes/tables-style.html
+++ b/layouts/shortcodes/tables-style.html
@@ -1,11 +1,19 @@
 <style>
 .markdown {
     line-height: 28px;
-
-.markdown table tr th, .markdown table tr td {
-    padding-top: 0rem;
-    padding-bottom: 0rem;
 }
+
+.markdown table tr th,.markdown table tr td {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+.markdown img {
+    width: 28px;
+    height: 28px;
+    vertical-align: top;
+}
+
 
 .markdown table th:first-of-type {
     min-width: 56px;
@@ -16,6 +24,7 @@
 }
 
 .markdown table th:nth-of-type(3) {
-    width: 20%;
+    width: 57%;
 }
+
 </style>
