--- a/layouts/shortcodes/tables-style.html
+++ b/layouts/shortcodes/tables-style.html
@@ -1,17 +1,17 @@
 <style>
 .markdown {
-    line-height: 28px;
+    line-height: 28px !important;
 }
 
 .markdown table tr th,.markdown table tr td {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
 }
 
 .markdown img {
-    width: 28px;
-    height: 28px;
-    vertical-align: top;
+    width: 28px !important;
+    height: 28px !important;
+    vertical-align: top !important;
 }
 
 
