--- a/layouts/shortcodes/tables-style.html
+++ b/layouts/shortcodes/tables-style.html
@@ -10,7 +10,7 @@
 
 .markdown img {
     width: 28px !important;
-    height: 28px !important;
+    height: auto !important;
     vertical-align: top !important;
 }
 
@@ -26,5 +26,4 @@
 .markdown table th:nth-of-type(3) {
     width: 57%;
 }
-
 </style>
